--- a/http/bundle/pom.xml
+++ b/http/bundle/pom.xml
@@ -51,13 +51,14 @@
                             org.apache.felix.http.bundle.internal.CombinedActivator
                         </Bundle-Activator>
                         <Export-Package>
-                            org.apache.felix.http.api;version${http.api.version};-split-package:=merge-first,
-                            org.apache.felix.http.cometd;version=${project.version};-split-package:=merge-first,
+                            javax.servlet.*;version=${servlet.version};-split-package:=merge-first,
                             org.osgi.service.http;version=${http.service.version};-split-package:=merge-first,
                             org.cometd.bayeux;version=${cometd.version};-split-package:=merge-first,
                             org.cometd.bayeux.client;version=${cometd.version};-split-package:=merge-first,
                             org.cometd.bayeux.server;version=${cometd.version};-split-package:=merge-first,
-                            javax.servlet.*;version=${servlet.version};-split-package:=merge-first
+                            org.apache.felix.http.api;version${http.api.version};-split-package:=merge-first,
+                            org.apache.felix.http.cometd;version=${project.version};-split-package:=merge-first,
+                            org.eclipse.jetty.*;-split-package:=merge-first;version=${version;===;${jetty.version}}
                         </Export-Package>
                         <Private-Package>
                             org.apache.felix.http.base.*;-split-package:=merge-first,
@@ -66,16 +67,20 @@
                             org.apache.felix.http.cometd.*,
                             org.apache.felix.http.jetty.*,
                             org.apache.felix.http.whiteboard.*,
-                            org.eclipse.jetty.*;-split-package:=merge-first,
                             org.cometd.server.*;-split-package:=merge-first,
                             org.cometd.common.*;-split-package:=merge-first
                         </Private-Package>
                         <Import-Package>
-                            javax.servlet.*,
-                            org.cometd.bayeux,
-                            org.cometd.bayeux.client,
-                            org.cometd.bayeux.server,
-                            *;resolution:=optional
+                        	javax.imageio;resolution:=optional,
+                        	javax.sql;resolution:=optional,
+                        	org.slf4j.*;resolution:=optional,
+                        	org.ietf.jgss;resolution:=optional,
+                        	org.mortbay.log;resolution:=optional;version="[6.1,7)",
+                        	org.mortbay.util.ajax;resolution:=optional;version="[6.1,7)",
+                        	org.osgi.service.useradmin;resolution:=optional,
+                        	org.codehaus.jackson.map;resolution:=optional,
+                        	org.codehaus.jackson.type;resolution:=optional,
+                            *
                         </Import-Package>
                     </instructions>
                 </configuration>
