--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -65,7 +65,7 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
                 <source>1.5</source>
-                <target>jsr14</target>
+                <target>1.5</target>
             </configuration>
         </plugin>
        <plugin>
