--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     </description>
 
     <modules>
+        <module>manipulator-bom</module>
         <module>annotations</module>
         <module>manipulator</module>
         <module>manipulator-it</module>
