--- a/ipojo/manipulator/manipulator-it/pom.xml
+++ b/ipojo/manipulator/manipulator-it/pom.xml
@@ -207,8 +207,14 @@
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.ipojo</artifactId>
             <!-- To update before the release -->
+
+            <!--
+            if you are using a release version, be aware that this may introduce test failures as you should
+            update this version to the same version as the manipulator
+            -->
+            <version>1.11.1</version>
+
             <!--<version>${project.version}</version>-->
-            <version>1.11.2-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.osgi</groupId>
