--- a/scrplugin/bnd-scr-plugin/pom.xml
+++ b/scrplugin/bnd-scr-plugin/pom.xml
@@ -40,6 +40,12 @@
 		and/or JavaDoc tags.
 	</description>
 
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/scrplugin/bnd-scr-plugin</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scrplugin/bnd-scr-plugin</developerConnection>
+        <url>http://svn.apache.org/repos/asf/felix/scrplugin/bnd-scr-plugin</url>
+    </scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
