Added proper groupId to ensure release logic uses the right one.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1724822 13f79535-47bb-0310-9956-ffa450edef68

--- a/deploymentadmin/deploymentadmin/pom.xml
+++ b/deploymentadmin/deploymentadmin/pom.xml
@@ -22,6 +22,7 @@
 		<osgi.version>4.2.0</osgi.version>
 	</properties>
 	<name>Apache Felix Deployment Admin</name>
+	<groupId>org.apache.felix</groupId>
 	<artifactId>org.apache.felix.deploymentadmin</artifactId>
 	<version>0.9.8-SNAPSHOT</version>
 	<packaging>bundle</packaging>
