Remove maven warning.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1724823 13f79535-47bb-0310-9956-ffa450edef68

--- a/deploymentadmin/deploymentadmin/pom.xml
+++ b/deploymentadmin/deploymentadmin/pom.xml
@@ -38,7 +38,7 @@
 			<version>${osgi.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.dependencymanager</artifactId>
 			<version>4.1.1</version>
 		</dependency>
