Use correct SCM tags.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1724832 13f79535-47bb-0310-9956-ffa450edef68

--- a/deploymentadmin/deploymentadmin/pom.xml
+++ b/deploymentadmin/deploymentadmin/pom.xml
@@ -89,4 +89,9 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/deploymentadmin/deploymentadmin</connection>
+		<developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/deploymentadmin/deploymentadmin</developerConnection>
+		<url>http://svn.apache.org/viewvc/felix/trunk/deploymentadmin/deploymentadmin</url>
+	</scm>
 </project>
