Fixed thrown exception when a bundle does not contain expected license files.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1733131 13f79535-47bb-0310-9956-ffa450edef68

--- a/dependencymanager/release/build.gradle
+++ b/dependencymanager/release/build.gradle
@@ -133,7 +133,7 @@ task makeStaging << {
 				def mandatory = ["META-INF/LICENSE", "META-INF/NOTICE", "META-INF/DEPENDENCIES", "META-INF/changelog.txt"]
 				mandatory.each { resource ->			
 					if (! files.contains(resource)) {
-						throw new GradleException("Missing LICENSE file in " + jarfile)
+						throw new GradleException("Missing mandatory license files in " + jarfile)
 					}
 				}
 			}
