Fix gogo shell build
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1735204 13f79535-47bb-0310-9956-ffa450edef68

--- a/gogo/shell/pom.xml
+++ b/gogo/shell/pom.xml
@@ -68,8 +68,8 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>rat-maven-plugin</artifactId>
+				<groupId>org.apache.rat</groupId>
+				<artifactId>apache-rat-plugin</artifactId>
 				<configuration>
 					<excludeSubProjects>false</excludeSubProjects>
 					<useEclipseDefaultExcludes>true</useEclipseDefaultExcludes>
@@ -79,6 +79,8 @@
 						<param>maven-eclipse.xml</param>
 						<param>.checkstyle</param>
 						<param>.externalToolBuilders/*</param>
+						<param>src/main/resources/gosh_profile</param>
+						<param>src/main/resources/motd</param>
 					</excludes>
 				</configuration>
 			</plugin>
