[gogo] Add missing repository for sshd 1.2.0 which is still being voted
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1736073 13f79535-47bb-0310-9956-ffa450edef68

--- a/gogo/jline/pom.xml
+++ b/gogo/jline/pom.xml
@@ -35,6 +35,16 @@
     </properties>
     <repositories>
         <repository>
+            <id>temp-sshd</id>
+            <url>https://repository.apache.org/content/repositories/orgapachemina-1021/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>ossrh.sonatype.snapshots.deploy</id>
             <name>OSSRH snapshot repository</name>
             <url>https://oss.sonatype.org/content/groups/public/</url>
