[maven-release-plugin] prepare release org.apache.felix.http.parent-9
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1736953 13f79535-47bb-0310-9956-ffa450edef68

--- a/http/parent/pom.xml
+++ b/http/parent/pom.xml
@@ -29,7 +29,7 @@
 
     <name>Apache Felix Http Parent POM</name>
     <artifactId>org.apache.felix.http.parent</artifactId>
-    <version>9-SNAPSHOT</version>
+    <version>9</version>
     <packaging>pom</packaging>
 
     <prerequisites>
@@ -53,9 +53,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/trunk/http/parent</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/http/parent</developerConnection>
-        <url>http://svn.apache.org/viewvc/felix/trunk/http/parent/</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/felix/releases/org.apache.felix.http.parent-9</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/releases/org.apache.felix.http.parent-9</developerConnection>
+        <url>http://svn.apache.org/viewvc/felix/releases/org.apache.felix.http.parent-9</url>
     </scm>
 
     <build>
