Use released parent poms
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1737321 13f79535-47bb-0310-9956-ffa450edef68

--- a/http/parent/pom.xml
+++ b/http/parent/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.felix</groupId>
         <artifactId>felix-parent</artifactId>
-        <version>5-SNAPSHOT</version>
+        <version>4</version>
         <relativePath>../../pom/pom.xml</relativePath>
     </parent>
 
