--- a/http/itest/pom.xml
+++ b/http/itest/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.apache.felix</groupId>
 		<artifactId>org.apache.felix.http.parent</artifactId>
-		<version>10-SNAPSHOT</version>
+		<version>9</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
