FELIX-4795 : Servlet API 3.x not supported
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1746226 13f79535-47bb-0310-9956-ffa450edef68

--- a/webconsole/pom.xml
+++ b/webconsole/pom.xml
@@ -116,7 +116,7 @@
                         </Export-Package>
                         <Import-Package>
                             org.json.*;version=0,
-                            javax.servlet.*;version=2.4,
+                            javax.servlet.*;version="[2.4,4)",
                             org.apache.commons.io; version="[1.4,3)",
                             *
                         </Import-Package>
