[FELIX-5243] Remove anonymous inner class, add a unit test to ensure package consistency
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1746470 13f79535-47bb-0310-9956-ffa450edef68

--- a/scr/pom.xml
+++ b/scr/pom.xml
@@ -226,6 +226,12 @@
 			<version>1.9</version>
 			<scope>compile</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-debug-all</artifactId>
+            <version>5.0.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <directory>${bundle.build.name}</directory>
