Felix Converter Service - add service loader support
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1750970 13f79535-47bb-0310-9956-ffa450edef68

--- a/converter/pom.xml
+++ b/converter/pom.xml
@@ -72,6 +72,27 @@
                     </instructions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includes>
+                        <include>src/**</include>
+                    </includes>
+                    <excludes>
+                        <exclude>src/main/resources/META-INF/services/org.osgi.service.converter.Converter</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            
         </plugins>
     </build>
 
