Felix Converter Service - add the start of a simple JSON parser
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1751460 13f79535-47bb-0310-9956-ffa450edef68

--- a/converter/pom.xml
+++ b/converter/pom.xml
@@ -101,14 +101,23 @@
             <groupId>org.osgi</groupId>
             <artifactId>osgi.annotation</artifactId>
             <version>6.0.1</version>
+            <scope>provided</scope>
         </dependency>
         
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>osgi.core</artifactId>
             <version>6.0.0</version>
+            <scope>provided</scope>
         </dependency>
-
+        
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.17</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
