Export the org.osgi.service.converter.util package.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1754472 13f79535-47bb-0310-9956-ffa450edef68

--- a/converter/pom.xml
+++ b/converter/pom.xml
@@ -67,7 +67,7 @@
                     <instructions>
                         <Bundle-Activator>org.apache.felix.converter.impl.Activator</Bundle-Activator>
                         <Private-Package>org.apache.felix.converter.*,org.yaml.snakeyaml.*</Private-Package>
-                        <Export-Package>org.osgi.service.converter</Export-Package>
+                        <Export-Package>org.osgi.service.converter, org.osgi.service.converter.util</Export-Package>
                         <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
