FELIX-5309 : SslFilter: sendRedirect does not support deliberate protocol changes on the current host
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1757420 13f79535-47bb-0310-9956-ffa450edef68

--- a/http/sslfilter/src/main/resources/OSGI-INF/metatype/org.apache.felix.http.sslfilter.SslFilter.properties
+++ b/http/sslfilter/src/main/resources/OSGI-INF/metatype/org.apache.felix.http.sslfilter.SslFilter.properties
@@ -22,3 +22,5 @@ ssl-forward.value.name=SSL forward value
 ssl-forward.value.description=HTTP Request header value that indicates a request is a SSL request terminated at a proxy. The default value is 'on'. Another commonly used value is 'https'.
 ssl-forward-cert.header.name=SSL client header
 ssl-forward-cert.header.description=HTTP Request header name that contains the client certificate forwarded by a proxy. The default value is 'X-Forwarded-SSL-Certificate'. Another commonly used value is 'X-Forwarded-SSL-Client-Cert'.
+rewrite.absolute.urls.name=Rewrite Absolute URLs
+rewrite.absolute.urls.description=If enabled, absolute URLs passed to either sendRedirect or by setting the location header are rewritten as well.
