Felix Converter - rename codec to serializer
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1759815 13f79535-47bb-0310-9956-ffa450edef68

--- a/converter/pom.xml
+++ b/converter/pom.xml
@@ -39,6 +39,6 @@
 
     <modules>
         <module>converter</module>
-        <module>codec</module>
+        <module>serializer</module>
     </modules>
 </project>
